# streak-app

./: .editorconfig  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: check-version.yml  publish.yml
src/: App.tsx  helpers.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AnimatedCounter.tsx  Confetti.tsx  Divider.tsx  Screen.tsx  StreakBrokenAlert.tsx
src/hooks/: useConfetti.ts  useStreak.ts
src/invocations/: index.ts
src/stores/: streak.ts
src/styles/: index.css
src/types/: index.ts
